<resources>
	<string name="app_name">乐读</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">ShiZhongYong</string>
	<string name="nav_header_subtitle">46428886@qq.com</string>

	<string name="msg_exit_app">再按一次退出APP！</string>

	<string name="cancel">取消</string>
	<string name="confirm">确定</string>
	<string name="remove">移出</string>
	<string name="search">搜索</string>
	<string name="retry">重试</string>
	<string name="change_source">换源</string>

	<string name="loading">加载中…</string>
	<string name="load_failed">加载失败，请重试</string>
	<string name="list_empty">暂无内容</string>
	<string name="change_site">换个站点</string>
	<string name="search_result_empty">未找到？换个站点试试</string>
	<string name="format_not_found_book">未找到《%1$s》</string>

	<string name="hint_search_keyword">请输入书名</string>
	<string name="add_to_bookshelves">加入书架</string>
	<string name="format_author">作者：%1$s</string>
	<string name="format_latest_chapter">最新章节：%1$s</string>
	<string name="format_add_to_bookshelves">已将《%1$s》加入书架</string>
	<string name="format_remove_from_bookshelves">已将《%1$s》移出书架</string>

	<string name="format_remove_confirm">确认将《%1$s》移出书架吗？</string>

	<string name="catalog">目录</string>
	<string name="asc">正序</string>
	<string name="desc">倒序</string>

	<string name="decrease_font_size">A-</string>
	<string name="increase_font_size">A+</string>

	<string name="msg_first_chapter">到头了，前面没有了！</string>
	<string name="msg_last_chapter">已经是最后一章了！</string>

</resources>
