<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:id="@+id/layout_failed"
    tools:visibility="visible">

    <Space
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/tv_change_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center"
        android:layout_toLeftOf="@+id/center"
        android:padding="10dp"
        android:text="@string/change_source"
        android:textColor="#999999"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center"
        android:layout_toRightOf="@+id/center"
        android:padding="10dp"
        android:text="@string/retry"
        android:textColor="#333333"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_retry"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/load_failed"
        android:textColor="#333333"
        android:textSize="16dp" />

</RelativeLayout>