<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search.SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            android:textColor="#222222"
            android:textSize="16dp" />

        <com.shizy.bookreader.ui.base.widget.ClearEditText
            android:id="@+id/edit_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/tv_cancel"
            android:background="@null"
            android:drawableLeft="@drawable/ic_search_grey"
            android:drawablePadding="8dp"
            android:hint="@string/hint_search_keyword"
            android:imeActionLabel="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/layout_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_loading_1" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/search_result_empty"
                android:textColor="#666666"
                android:textColorHint="@android:color/transparent"
                android:textSize="14sp" />

        </LinearLayout>

        <include layout="@layout/layout_loading" />
    </FrameLayout>

</LinearLayout>